--- a/Aman Quiz/style.css
+++ b/Aman Quiz/style.css
@@ -107,7 +107,7 @@ h1 {
   /* border: 2px solid black; */
   height: 5%;
   width: 20%;
-  color: #d8c9ae;
+  color: #cbbb9d;
   margin-bottom: auto;
   padding: 10%;
   font-size: 200%;
