--- a/Experiment 2 (Quiz game)/style.css
+++ b/Experiment 2 (Quiz game)/style.css
@@ -9,13 +9,13 @@
 }
 
 body {
-    /* background-color: rgb(73, 230, 236); */
+    
     width: 100%;
     height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('4CND.gif'); /* Path to your GIF */
+    background-image: url('4CND.gif'); /* Path to GIF */
     background-size: cover; /* Scale the GIF to cover the entire viewport */
     background-repeat: no-repeat; /* Prevent repeating the GIF */
     background-position: center; /* Center the GIF */
