--- a/Commit/style.css
+++ b/Commit/style.css
@@ -67,7 +67,7 @@ body {
   background-size: 100%;
   margin: 0;
   height: 80vh;
-  background-color: #d2c4aa;
+  background-color: #cbbda3;
   background-image: url(res/bg3.gif);
 }
 h1 {
