--- a/Commit/style.css
+++ b/Commit/style.css
@@ -25,7 +25,7 @@ h1{
     /* border: 2px solid black; */
     background-color: #575757;
     border-radius: 20%;
-    color: whitesmoke;
+    color: rgb(240, 236, 236);
     height: 60%;
     width: 35%;
     display: flex;
