--- a/Commit/style.css
+++ b/Commit/style.css
@@ -39,7 +39,7 @@ h1{
     border: 2px solid rgb(160, 32, 32);
     height: 5%;
     width: 20%;
-    color: #D8C9AE;
+    color: #d4c7af;
     margin-bottom: auto;
     padding: 10%;
     font-size: 200%;
