--- a/Commit/style.css
+++ b/Commit/style.css
@@ -95,7 +95,7 @@ h1 {
   background-color: #383535;
   /* background-color: transparent; */
   border-radius: 20%;
-  color: whitesmoke;
+  color: rgb(249, 248, 248);
   height: 60%;
   width: 35%;
   /* display: flex; */
